--- a/report/pos_warehouse_move_report.xml
+++ b/report/pos_warehouse_move_report.xml
@@ -7,11 +7,17 @@
             <field name="arch" type="xml">
                 <search>
                     <field name="reference"/>
-                    <field name="operation_type"/>
+<!--                    <field name="operation_type"/>-->
                     <field name="pos_branch_id"/>
-                    <filter string="Done Transfers" name="done" domain="[('state', '=', 'done')]"/>
-                    <filter string="Done Deliveries" name="done_deliveries" domain="[('state', '=', 'done'), ('picking_type_code', '=', 'outgoing')]"/>
-                    <filter string="Done Receipts" name="done_receipts" domain="[('state', '=', 'done'), ('picking_type_code', '=', 'incoming')]"/>
+<!--                    <filter string="Product" name="done" domain="[('state', '=', 'done')]"/>-->
+<!--                    <filter string="Done Transfers" name="done" domain="[('state', '=', 'done')]"/>-->
+<!--                    <filter string="Done Deliveries" name="done_deliveries" domain="[('state', '=', 'done'), ('picking_type_code', '=', 'outgoing')]"/>-->
+<!--                    <filter string="Done Receipts" name="done_receipts" domain="[('state', '=', 'done'), ('picking_type_code', '=', 'incoming')]"/>-->
+                    <group string="Group By" name="groupby">
+                        <filter name="date_groupby" string="Date" context="{'group_by': 'date_done'}"/>
+                        <filter name="product_tmpl_groupby" string="Product" context="{'group_by': 'product_id'}"/>
+                        <filter name="product_categ_groupby" string="Product Categories" context="{'group_by': 'categ_id'}"/>
+                    </group>
                 </search>
             </field>
         </record>
@@ -23,7 +29,8 @@
                 <pivot string="Stock Overview">
                     <field name="operation_type" type="col"/>
                     <field name="pos_branch_id" type="row"/>
-                    <field name="categ_id" type="row"/>
+                    <field name="reference" type="row"/>
+                    <field name="product_id" type="row"/>
                     <field name="quantity" type="measure"/>
                 </pivot>
             </field>
@@ -46,7 +53,7 @@
             <field name="mode">primary</field>
             <field name="arch" type="xml">
                 <dashboard>
-                    <view type="graph" ref="pos_retail_cubic.warehouse_branch_move_report_graph"/>
+<!--                    <view type="graph" ref="pos_retail_cubic.warehouse_branch_move_report_graph"/>-->
                     <view type="pivot" ref="pos_retail_cubic.warehouse_branch_move_report_pivot_view"/>
                 </dashboard>
             </field>
@@ -55,8 +62,8 @@
         <record id="menu_warehouse_branch_move_report_action" model="ir.actions.act_window">
             <field name="name">Warehouse Move Analysis</field>
             <field name="res_model">pos.branch.stock.move.report</field>
-            <field name="view_mode">dashboard</field>
-            <field name="view_id" ref="warehouse_branch_move_report_dashboard_view"/>
+            <field name="view_mode">pivot</field>
+            <field name="view_id" ref="warehouse_branch_move_report_pivot_view"/>
             <field name="domain" eval="[('picking_type_code', '!=', False)]"/>
             <field name="context">{'search_default_done': 1, 'time_ranges': {'field':'date_done', 'range':'last_30_days'}}</field>
         </record>
