--- a/views/pos_config.xml
+++ b/views/pos_config.xml
@@ -2,18 +2,173 @@
 <odoo>
     <data>
 
+        <record id="pos_cubic_view_pos_config_kanban" model="ir.ui.view">
+            <field name="name">pos.config</field>
+            <field name="model">pos.config</field>
+            <field name="inherit_id" ref="point_of_sale.view_pos_config_kanban"/>
+            <field name="arch" type="xml">
+                <!--                <xpath expr="div[contains(@class, 'o_kanban_card_manage_pane')]" position="attributes">-->
+                <!--                    <attribute name="invisible">1</attribute>-->
+                <!--                </xpath>-->
+
+                <xpath expr="//field[@name='currency_id']/.." position="replace">
+                    <kanban create="false" class="o_kanban_dashboard o_pos_kanban">
+                        <field name="current_user_id" invisible="1"/>
+                        <field name="name"/>
+                        <field name="current_session_id"/>
+                        <field name="current_session_state"/>
+                        <field name="last_session_closing_date"/>
+                        <field name="pos_session_username"/>
+                        <field name="pos_session_state"/>
+                        <field name="pos_session_duration"/>
+                        <field name="currency_id"/>
+                        <templates>
+                            <t t-name="kanban-box">
+                                <div>
+                                    <div class="o_kanban_card_header">
+                                        <div class="o_kanban_card_header_title mb16">
+                                            <div class="o_primary">
+                                                <t t-esc="record.name.value"/>
+                                            </div>
+                                            <t t-if="record.pos_session_state.raw_value == 'new_session'">
+                                                <div class="badge badge-info o_kanban_inline_block">New session</div>
+                                            </t>
+                                            <t t-if="!record.current_session_id.raw_value &amp;&amp; record.pos_session_username.value">
+                                                <div class="badge badge-info o_kanban_inline_block">Opened by
+                                                    <t t-esc="record.pos_session_username.value"/>
+                                                </div>
+                                            </t>
+                                            <t t-if="record.pos_session_state.raw_value == 'opening_control'">
+                                                <div class="badge badge-info o_kanban_inline_block">Opening Control
+                                                </div>
+                                            </t>
+                                            <t t-if="record.pos_session_state.raw_value == 'closing_control'">
+                                                <div class="badge badge-info o_kanban_inline_block">Closing Control
+                                                </div>
+                                            </t>
+                                            <t t-if="record.pos_session_state.raw_value == 'opened' and record.pos_session_duration.raw_value > 1">
+                                                <div t-attf-class="badge badge-#{record.pos_session_duration.raw_value > 3 and 'danger' or 'warning'} o_kanban_inline_block"
+                                                     title="The session has been opened for an unusually long period. Please consider closing.">
+                                                    To Close
+                                                </div>
+                                            </t>
+                                        </div>
+                                        <div class="o_kanban_manage_button_section">
+                                            <a class="o_kanban_manage_toggle_button" href="#">
+                                                <i class="fa fa-ellipsis-v" role="img" aria-label="Manage"
+                                                   title="Manage"/>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="container o_kanban_card_content">
+                                        <div class="row">
+                                            <div class="col-6 o_kanban_primary_left">
+                                                <button t-if="record.current_session_state.raw_value === 'opened'"
+                                                        class="btn btn-primary" name="open_ui" type="object">Resume
+                                                </button>
+
+                                                <button t-if="record.current_session_state.raw_value === 'new_session' || record.current_session_state.raw_value === 'opening_control'"
+                                                        class="btn btn-primary" name="open_existing_session_cb"
+                                                        type="object">Open Session
+                                                </button>
+
+                                                <button t-if="_.contains(['opened', 'closing_control'], record.current_session_state.raw_value)"
+                                                        class="btn btn-secondary" name="open_existing_session_cb"
+                                                        type="object">Close
+                                                </button>
+
+                                                <button t-if="!record.current_session_id.raw_value &amp;&amp; !record.pos_session_username.value"
+                                                        class="btn btn-primary" name="open_session_cb" type="object">New
+                                                    Session
+                                                </button>
+
+                                            </div>
+                                            <div class="col-6 o_kanban_primary_right">
+
+                                                <div t-if="record.last_session_closing_date.value" class="row">
+                                                    <div class="col-6">
+                                                        <span>Last Closing Date</span>
+                                                    </div>
+                                                    <div class="col-6">
+                                                        <span>
+                                                            <t t-esc="record.last_session_closing_date.value"/>
+                                                        </span>
+                                                    </div>
+                                                </div>
+
+                                                <div t-if="record.last_session_closing_date.value" class="row">
+                                                    <div class="col-6">
+                                                        <span>Cash Balance</span>
+                                                    </div>
+                                                    <div class="col-6">
+                                                        <span>
+                                                            <field name="last_session_closing_cash" widget="monetary"/>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div style="text-align:right;" t-if="record.current_user_id.value">
+                                            <img
+                                                    class="oe_kanban_avatar o_image_24_cover"
+                                                    t-att-src="kanban_image('res.users', 'image_128', record.current_user_id.raw_value)"
+                                                    t-att-title="record.current_user_id.value"
+                                                    t-att-alt="record.current_user_id.value"
+                                            />
+                                        </div>
+                                    </div>
+                                    <div class="container o_kanban_card_manage_pane dropdown-menu" groups="pos_retail.group_branch_manager" role="menu">
+                                        <div class="row">
+                                            <div class="col-6 o_kanban_card_manage_section o_kanban_manage_view">
+                                                <div role="menuitem" class="o_kanban_card_manage_title">
+                                                    <span>View</span>
+                                                </div>
+                                                <div role="menuitem">
+                                                    <a name="%(point_of_sale.action_pos_order_filtered)d" type="action">Orders</a>
+                                                </div>
+                                                <div role="menuitem">
+                                                    <a name="%(point_of_sale.action_pos_session_filtered)d" type="action">Sessions</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-6 o_kanban_card_manage_section o_kanban_manage_new">
+                                                <div role="menuitem" class="o_kanban_card_manage_title">
+                                                    <span>Reporting</span>
+                                                </div>
+                                                <div role="menuitem">
+                                                    <a name="%(point_of_sale.action_report_pos_order_all_filtered)d" type="action">
+                                                        Orders
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div t-if="widget.editable" class="o_kanban_card_manage_settings row"
+                                             groups="point_of_sale.group_pos_manager">
+                                            <div role="menuitem" class="col-12">
+                                                <a type="edit">Settings</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </t>
+                        </templates>
+                    </kanban>
+
+                </xpath>
+            </field>
+        </record>
+
         <menuitem id="point_of_sale.menu_point_of_sale" name="Orders" parent="point_of_sale.menu_point_root"
                   groups="point_of_sale.group_pos_manager" sequence="10"/>
         <menuitem id="point_of_sale.pos_config_menu_catalog"
                   name="Products" groups="point_of_sale.group_pos_manager"
                   parent="point_of_sale.menu_point_root"/>
-<!--        <menuitem-->
-<!--            id="hr.menu_hr_employee_payroll"-->
-<!--            name="Employees"-->
-<!--            parent="hr.menu_hr_root"-->
-<!--            groups="hr.group_hr_manager"-->
-<!--            sequence="3"/>-->
-
+        <!--        <menuitem-->
+        <!--            id="hr.menu_hr_employee_payroll"-->
+        <!--            name="Employees"-->
+        <!--            parent="hr.menu_hr_root"-->
+        <!--            groups="hr.group_hr_manager"-->
+        <!--            sequence="3"/>-->
 
 
         <record id="cubic_pos_config_retail" model="ir.ui.view">
@@ -25,7 +180,7 @@
                     <field name="cash_balance"/>
                 </xpath>
                 <xpath expr="//field[@name='mrp']" position="after">
-                    <field name="visa_account_id" />
+                    <field name="visa_account_id"/>
                     <field name="modify_bom" attrs="{'invisible': [('mrp', '=', False)]}"/>
                 </xpath>
                 <xpath expr="//field[@name='mrp_produce_direct']" position="after">
